# netbox-oxidized

./: README.md  pyproject.toml
.github/workflows/: ci.yml
netbox_oxidized/: __init__.py  client.py  navigation.py  urls.py  views.py
netbox_oxidized/api/: __init__.py  urls.py
netbox_oxidized/templates/netbox_oxidized/: config_audit.html  config_diff.html  config_search.html  device_tab.html  device_tab_content.html  settings.html
